--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/white_bg"
     >
 
     <LinearLayout
@@ -24,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <!--        <TextView
+<!--        <TextView
             android:id="@+id/titleofscreen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,11 +35,11 @@
             android:textSize="30sp" />-->
 
         <ImageView
-            android:id="@+id/logoMain"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/serene_logo_main" />
-
+            android:id="@+id/logoMain"
+            android:src="@drawable/serene_logo_main"
+            />
         <ImageView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -71,18 +69,17 @@
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="411dp"
-        android:layout_height="610dp"
+        android:layout_height="580dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:navGraph="@navigation/mobile_navigation"
-        tools:ignore="MissingConstraints" />
+        app:navGraph="@navigation/mobile_navigation" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
