--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -4,123 +4,146 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#4D4CA1D3"
+    android:background="@drawable/main_background"
     tools:context=".LogInPage">
 
     <View
         android:id="@+id/white_frame"
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="545dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="147dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/white_frame" />
 
     <View
         android:id="@+id/serene_logo"
         android:layout_width="411dp"
         android:layout_height="180dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="false"
         android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="131dp"
+        android:layout_marginTop="140dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="321dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginBottom="354dp"
-        android:fontFamily="Roboto"
-        android:text="Welcome to Serene, please login below:"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="380dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/welcome_back"
         android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/Email"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/Password"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="282dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
-        android:hint="Email "
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor="#B1B0B0"/>
+        android:textColor="#B1B0B0" />
 
     <EditText
         android:id="@+id/Password"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/forgetPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:textColor="#B1B0B0" />
+
+
+    <TextView
+        android:id="@+id/forgetPassword"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="233dp"
-        android:ems="10"
-        android:hint="Password "
-        android:inputType="textPassword"
-        android:textColor="#B1B0B0"/>
+        android:layout_marginBottom="230dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/forgot_password"
+        android:textAlignment="textEnd"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+
+    <TextView
+        android:id="@+id/Error"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/forgetPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:padding="5dp"
+        android:text="@string/error"
+        android:textColor="@color/Error" />
 
     <Button
-        android:id="@+id/Log_In"
-        android:layout_width="102dp"
-        android:layout_height="29dp"
-        android:layout_alignParentStart="true"
+        android:id="@+id/loginBtn"
+        android:layout_width="160dp"
+        android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="159dp"
-        android:layout_marginBottom="173dp"
-        android:background="#FFFFFF"
-        android:clickable="true"
-        android:fontFamily="sans-serif-medium"
-        android:text="Login"
+        android:layout_marginBottom="100dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/Grey"
+        android:enabled="false"
+        android:fontFamily="@font/montserrat"
+        android:padding="3dp"
+        android:text="@string/login"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#4CA1D3"
+        android:textColor="@color/white"
         android:textSize="18sp"
-        android:typeface="normal" />
+        />
 
-    <TextView
-        android:id="@+id/textsign_up"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginBottom="114dp"
-        android:fontFamily="Roboto"
-        android:text="If you don't have an account, SIGN UP"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="normal"/>
-
-    <TextView
-        android:id="@+id/sign_up"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="300dp"
-        android:layout_marginBottom="99dp"
-        android:fontFamily="Roboto"
-        android:text="─────"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:clickable="true"/>
+        android:layout_alignTop="@+id/loginBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/description2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/don_t_have_an_account"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/registerTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/register_caps"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
