--- a/app/src/main/res/layout/activity_add__medicine__page.xml
+++ b/app/src/main/res/layout/activity_add__medicine__page.xml
@@ -63,16 +63,40 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/MedicineDays"
-        android:layout_width="wrap_content"
+        android:id="@+id/MedicineDaysFrom"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
         android:layout_below="@id/intakeDaysTV"
         android:layout_marginStart="90dp"
+        android:layout_marginBottom="10dp"
+        android:ems="10"
+        android:hint="DD/MM/YY"
+        android:inputType="textPersonName"
+        android:text="" />
+
+    <TextView
+        android:id="@+id/D"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-"
+        android:layout_below="@id/intakeDaysTV"
+        android:layout_toRightOf="@id/MedicineDaysFrom"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/MedicineDaysTill"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/intakeDaysTV"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@id/D"
+        android:ems="10"
+        android:hint="DD/MM/YY"
+        android:inputType="textPersonName"
+        android:text="" />
 
     <TextView
         android:id="@+id/TimetextView"
@@ -84,7 +108,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:textSize="18sp"
-        android:layout_below="@id/MedicineDays"/>
+        android:layout_below="@id/MedicineDaysFrom"/>
 
     <EditText
         android:id="@+id/MedicineTime"
