--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     >
 
     <LinearLayout
@@ -22,28 +24,15 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-<!--        <TextView
-            android:id="@+id/titleofscreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="6"
-            android:fontFamily="@font/montserrat"
-            android:paddingLeft="30dp"
-            android:text="Serene"
-            android:textColor="#000000"
-            android:textSize="30sp" />-->
-
         <ImageView
+            android:id="@+id/logoMain"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:id="@+id/logoMain"
-            android:src="@drawable/serene_logo_main"
-            />
+            android:src="@drawable/serene_logo_main" />
+
         <ImageView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-
             />
 
         <ImageView
@@ -68,18 +57,19 @@
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="411dp"
-        android:layout_height="580dp"
+        android:layout_width="match_parent"
+        android:layout_height="610dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation"
+        tools:ignore="MissingConstraints" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
