--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,185 +1,284 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:id="@+id/welcome_pag"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/signup_page"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/main_background"
+    tools:context=".Controller.Signup.Signup">
 
-    android:background="#4D4CA1D3"
-
-
-
-    >
 
     <View
         android:id="@+id/white_frame"
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="545dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="147dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/white_frame" />
+
 
     <View
         android:id="@+id/serene_logo"
         android:layout_width="411dp"
         android:layout_height="180dp"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="117dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="0dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="43dp"
-        android:layout_marginBottom="371dp"
-        android:fontFamily="Roboto"
-        android:text="Welcome to Serene, if it’s your first time here, register below:"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/description2"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="53dp"
-        android:layout_marginBottom="24dp"
-        android:fontFamily="Roboto"
-        android:text="If you already have an account, SIGN IN"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="normal" />
-
-    <TextView
-        android:id="@+id/description3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="310dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="Roboto"
-        android:text="─────"
+        android:layout_above="@+id/username"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/join_us"
         android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="normal" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="313dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="353dp"
         android:ems="10"
-        android:hint="Full Name"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/full_name"
         android:inputType="textPersonName"
+        android:textColor="@color/Grey" />
+
+    <EditText
+        android:id="@+id/emailInput"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="303dp"
+        android:ems="10"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
         android:textColor="#B1B0B0" />
 
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="213dp"
+        android:layout_marginBottom="253dp"
         android:ems="10"
-        android:hint="Password"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="#B1B0B0" />
 
     <EditText
         android:id="@+id/CpasswordInput"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="163dp"
+        android:layout_marginBottom="203dp"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:textColor="#B1B0B0" />
 
-    <EditText
-        android:id="@+id/emailInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="263dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:textColor="#B1B0B0" />
-
-    <ImageView
-        android:id="@+id/signup_withgoogle"
-        android:layout_width="213dp"
-        android:layout_height="94dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="98dp"
-        android:layout_marginBottom="27dp"
-        android:clickable="true"
-        app:srcCompat="@drawable/signup_withgoogle" />
-
-    <LinearLayout
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_marginTop="670dp">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id = "@+id/layout"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:orientation = "vertical">
-    </LinearLayout>
-
     <Button
-        android:id="@+id/reg_btn"
-        android:layout_width="102dp"
-        android:layout_height="29dp"
-        android:layout_alignParentStart="true"
+        android:id="@+id/signupBtn"
+        android:layout_width="160dp"
+        android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="100dp"
         android:background="#FFFFFF"
-        android:clickable="true"
-        android:fontFamily="sans-serif-medium"
-        android:text="Next"
+        android:backgroundTint="@color/Grey"
+        android:enabled="false"
+        android:fontFamily="@font/montserrat"
+        android:padding="3dp"
+        android:text="@string/signup"
         android:textAlignment="center"
-        android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#4CA1D3"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:typeface="normal" />
 
+
+    <TextView
+        android:id="@+id/Error"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/description"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="253dp"
+        android:padding="5dp"
+        android:text="@string/error"
+        android:textColor="@color/Error" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/signupBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/description2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/already_have_an_account"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/loginBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/login"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/colorAccent"
+            android:layout_marginStart="4dp"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
+    <!--
+
+
+
+     <TextView
+         android:id="@+id/description2"
+         android:layout_width="321dp"
+         android:layout_height="wrap_content"
+         android:layout_alignParentStart="true"
+         android:layout_alignParentBottom="true"
+         android:layout_centerInParent="true"
+         android:layout_marginStart="53dp"
+         android:layout_marginBottom="24dp"
+         android:fontFamily="Roboto"
+         android:text="If you already have an account, SIGN IN"
+         android:textAlignment="center"
+         android:textSize="18sp"
+         android:textStyle="normal" />
+
+
+     <EditText
+         android:id="@+id/username"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerInParent="true"
+         android:layout_marginBottom="313dp"
+         android:ems="10"
+         android:hint="Full Name"
+         android:inputType="textPersonName"
+         android:textColor="#B1B0B0" />
+
+     <EditText
+         android:id="@+id/passwordInput"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         android:layout_marginBottom="213dp"
+         android:ems="10"
+         android:hint="Password"
+         android:inputType="textPassword"
+         android:textColor="#B1B0B0" />
+
+     <EditText
+         android:id="@+id/CpasswordInput"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         android:layout_marginBottom="163dp"
+         android:ems="10"
+         android:hint="Confirm Password"
+         android:inputType="textPassword"
+         android:textColor="#B1B0B0" />
+
+     <EditText
+         android:id="@+id/emailInput"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         android:layout_marginBottom="263dp"
+         android:ems="10"
+         android:hint="Email"
+         android:inputType="textEmailAddress"
+         android:textColor="#B1B0B0" />
+
+     <ImageView
+         android:id="@+id/signup_withgoogle"
+         android:layout_width="213dp"
+         android:layout_height="94dp"
+         android:layout_alignParentStart="true"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         android:layout_marginStart="98dp"
+         android:layout_marginBottom="27dp"
+         android:clickable="true"
+         app:srcCompat="@drawable/signup_withgoogle" />
+
+     <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="670dp">
+
+     </LinearLayout> -->
+
+    <!--  <Button
+          android:id="@+id/reg_btn"
+          android:layout_width="102dp"
+          android:layout_height="29dp"
+          android:layout_alignParentStart="true"
+          android:layout_alignParentBottom="true"
+          android:layout_centerHorizontal="true"
+          android:layout_marginStart="156dp"
+          android:layout_marginBottom="120dp"
+          android:background="#FFFFFF"
+          android:clickable="true"
+          android:fontFamily="sans-serif-medium"
+          android:text="Next"
+          android:textAlignment="center"
+          android:textAllCaps="true"
+          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+          android:textColor="#4CA1D3"
+          android:textSize="18sp"
+          android:typeface="normal" />-->
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
+
 </RelativeLayout>
+
+
 
 
 
