--- a/app/src/main/res/layout/activity_sociodemo.xml
+++ b/app/src/main/res/layout/activity_sociodemo.xml
@@ -1,65 +1,318 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F3F3"
+    android:background="@drawable/main_background"
     >
-
-
 
     <View
         android:id="@+id/white_bg"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="130dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="575dp"
-        android:background="@drawable/white_bg" />
-
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="66dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:fontFamily="@font/roboto"
-        android:text="←"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="50sp" />
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="93dp"
         android:fontFamily="@font/montserrat"
-        android:text="Socio-Demo Information"
-        android:textColor="#000000"
-        android:textSize="26sp" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="373dp"
-        android:layout_height="85dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="170dp"
-        android:fontFamily="@font/roboto"
-        android:text="Welcome to Serene, please fill in the form with your socio-demographic information so we can provide you more accurate reports:"
-        android:textColor="#8A000000"
-        android:textSize="18sp" />
+        android:layout_marginTop="40dp"
+        android:text="Socio-demographic\nInformation"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="25sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@+id/white_bg"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/layout_rounded_bg"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="360dp"
+            android:layout_height="85dp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="@string/socio_description"
+            android:padding="3dp"
+            android:textColor="@color/Grey"
+            android:textSize="15sp" />
+
+
+        <LinearLayout
+            android:id="@+id/mainLayoutQs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="40dp"
+            android:paddingEnd="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q1"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/age"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+                <EditText
+                    android:id="@+id/a1"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="@string/ex_21"
+                    android:inputType="textPersonName" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q2"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/height"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+                <EditText
+                    android:id="@+id/a2"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="@string/ex_160"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/e2"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/cm"
+                    android:textColor="#8A000000"
+                    android:textSize="18sp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q3"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/weight"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+                <EditText
+                    android:id="@+id/a3"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="@string/ex_55"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/e3"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/kg"
+                    android:textColor="#8A000000"
+                    android:textSize="18sp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q4"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/monthly_income"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+                <EditText
+                    android:id="@+id/a4"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="@string/ex_2000"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/e4"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/sr"
+                    android:textColor="#8A000000"
+                    android:textSize="18sp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q8"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/chronic_diseases"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+
+                <EditText
+                    android:id="@+id/a8"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="@string/ex_diabetes"
+                    android:inputType="textPersonName" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q5"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/martial_status"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+
+                <Spinner
+                    android:id="@+id/a5"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q6"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/employment_status"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+
+                <Spinner
+                    android:id="@+id/a6"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/q7"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
+                    android:text="@string/cigarette_smoker"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    />
+
+
+                <Spinner
+                    android:id="@+id/a7"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"/>
+
+
+            </LinearLayout>
+
+
+        </LinearLayout> <!--end main layout-->
+
+        <Button
+            android:id="@+id/nextBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="@string/next" />
+
+
+    </LinearLayout>
+
+
+    <!--
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -379,7 +632,9 @@
         android:ellipsize="none"
         android:text="Register"
         android:textColor="#FFFFFF" />
-    <!-- arrow-left -->
+    &lt;!&ndash; arrow-left &ndash;&gt;
+
+-->
 
 
 </RelativeLayout>
