--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -4,21 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#4D4CA1D3"
+    android:background="@drawable/main_background"
     tools:context=".WelcomePage">
 
     <View
         android:id="@+id/white_frame"
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="545dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="147dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/white_frame" />
 
     <View
@@ -26,54 +23,68 @@
         android:layout_width="411dp"
         android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="152dp"
         android:background="@drawable/serene_logo" />
 
     <TextView
         android:id="@+id/description4"
         android:layout_width="321dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="43dp"
-        android:layout_marginBottom="321dp"
+        android:layout_below="@+id/serene_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
         android:fontFamily="Roboto"
-        android:text="Welcome to Serene"
+        android:text="@string/welcome_to_serene"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/LOGIN"
-        android:layout_width="129dp"
+        android:id="@+id/login"
+        android:layout_width="213dp"
         android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/description4"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="142dp"
-        android:layout_marginBottom="229dp"
-        android:background="#4CA1D3"
-        android:ellipsize="none"
-        android:text="Login"
+        android:layout_marginTop="35dp"
+        android:background="@color/colorAccent"
+        android:text="@string/login"
         android:textColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/REGISTER"
-        android:layout_width="129dp"
+        android:id="@+id/register"
+        android:layout_width="213dp"
         android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/login"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="143dp"
-        android:layout_marginBottom="161dp"
-        android:background="#4CA1D3"
-        android:ellipsize="none"
-        android:text="Register"
-        android:textColor="#FFFFFF" />
+        android:layout_marginTop="20dp"
+        android:background="@color/colorAccent"
+        android:text="@string/register"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/description3"
+        android:layout_width="321dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/register"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:fontFamily="Roboto"
+        android:text="@string/or"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/signup_withgoogle"
+        android:layout_width="213dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/description3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/signup_withgoogle" />
+
+
 </RelativeLayout>
