--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,27 +4,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F3F3"
+    android:background="@drawable/layout_rounded_bg"
     android:id="@+id/layout"
     android:orientation="vertical"
     >
 
 
-    <TextView
-        android:id="@+id/titleofscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:fontFamily="@font/montserrat"
-        android:paddingTop="10dp"
-        android:text="Home"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:textColor="#000000"
-        android:textSize="25dp" />
+    <!--    <TextView
+            android:id="@+id/titleofscreen"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:fontFamily="@font/montserrat"
+            android:paddingTop="10dp"
+            android:text="Home"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="25sp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="280dp"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="Anxiety Level"
+            android:text="@string/anxiety_level"
             android:textColor="#817889"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -43,16 +43,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="(Throughout the week)"
+            android:text="@string/throughout_the_week"
             android:textColor="#817889"
             android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/AnxietyLevel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:layout_gravity="center"
+            android:src="@drawable/test_anxiety_level_graph"/>
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="330dp"
+        android:layout_gravity="center"
+        android:layout_height="2dp"
+        android:background="#1A000000" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="Improvement"
+            android:text="@string/improvement"
             android:layout_weight="1"
             android:textColor="#817889"
             android:textSize="18sp"
@@ -79,7 +89,7 @@
             android:layout_weight="1"
             android:text="30%"
             android:textColor="@color/colorAccent"
-            android:textSize="35dp"
+            android:textSize="35sp"
             android:layout_marginTop="15dp"
             android:textStyle="bold" />
 
@@ -91,16 +101,16 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="Next Appointment"
-        android:textColor="#817889"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="15dp"/>
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/next_appointment"
+            android:textColor="#817889"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="15dp"/>
 
 
         <androidx.cardview.widget.CardView
@@ -108,41 +118,41 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#F3F3F3">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:layout_weight="4"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/doctor_name"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="Dr.Name"
-                    android:textColor="#000000" />
+                    android:layout_margin="15dp"
+                    android:layout_weight="4"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/session_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="100dp"
-                    android:layout_weight="1"
-                    android:text="MM DD" />
+                    <TextView
+                        android:id="@+id/doctor_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="Dr.Name"
+                        android:textColor="#000000" />
 
-                <TextView
-                    android:id="@+id/session_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="(hh:mmam/pm)" />
-            </LinearLayout>
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/session_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="100dp"
+                        android:layout_weight="1"
+                        android:text="MM DD" />
+
+                    <TextView
+                        android:id="@+id/session_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="(hh:mmam/pm)" />
+                </LinearLayout>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
