--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#F3F3F3"
+    android:background="@drawable/layout_rounded_bg"
     android:id="@+id/layout"
     android:orientation="vertical">
 
@@ -18,38 +18,42 @@
         android:text="Generate Report"
         android:gravity="center"
         android:layout_gravity="center"
-        android:textColor="#000000"
-        android:textSize="25dp" />
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         android:padding="20dp">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="Duration:"
-        android:textColor="#515C6F"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="Duration:"
+            android:textColor="#515C6F"
+            android:layout_marginBottom="10dp"
+            android:textSize="20sp" />
 
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/radio_group"
-        android:checkedButton="@id/radioButton1"
-        tools:ignore="UnknownId">
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio_group"
+            android:checkedButton="@id/radioButton1"
+            tools:ignore="UnknownId">
 
 
             <RadioButton
                 android:id="@+id/radioButton1"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Last Two Weeks"
                 android:layout_margin="5dp"
+                android:textSize="15sp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"
                 />
@@ -59,8 +63,10 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Last Month"
                 android:layout_margin="5dp"
+                android:textSize="15sp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"/>
 
@@ -69,78 +75,80 @@
                 android:id="@+id/radioButton3"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Specific period"
+                android:textSize="15sp"
                 android:layout_margin="5dp"
                 android:background="@drawable/white_background"
                 android:focusable="auto" />
 
 
-    </RadioGroup>
+        </RadioGroup>
 
-
-    <LinearLayout
-        android:id="@+id/data_picker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        tools:ignore="UnknownId">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/data_picker"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="1">
+            android:orientation="horizontal"
+            android:padding="10dp"
+            tools:ignore="UnknownId">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start"
-                />
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/start_date"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Start"
+                    />
+
+                <TextView
+                    android:id="@+id/start_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DD/MM/YYYY" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/start"
+                    android:text="Start"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DD/MM/YYYY" />
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_weight="1">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/start"
-                android:text="Start"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="End"
+                    />
 
+                <TextView
+                    android:id="@+id/end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DD/MM/YYYY" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/end"
+                    android:text="End">
+                </Button>
+
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="End"
-                />
-
-            <TextView
-                android:id="@+id/end_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="DD/MM/YYYY" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/end"
-                android:text="End">
-            </Button>
-
-        </LinearLayout>
-    </LinearLayout>
 
     </LinearLayout>
 
