--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -1,284 +1,241 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#F3F3F3"
+    android:background="@drawable/main_background"
+    android:orientation="vertical"
     tools:context=".Controller.Homepage.Patient.PatientProfile">
 
 
     <LinearLayout
-        android:layout_width="362dp"
-        android:layout_height="54dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="384dp"
-        android:background="@drawable/white_background"
-        android:clickable="true"
-        android:focusable="auto"
-        android:orientation="horizontal">
+        android:id="@+id/white_bg"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
 
+
+        >
+        <!--Back button TO PREV FRAG -->
         <ImageView
-            android:id="@+id/doctor_icon"
-            android:layout_width="30dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="-2dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_doctor_icon" />
-
-        <TextView
-            android:id="@+id/doctor_text"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="1"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:text="Doctor"
-            android:textAlignment="center"
-            android:textColor="#515C6F"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/doctor_text2"
-            android:layout_width="148dp"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="1"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:text="Doctor"
-            android:textAlignment="center"
-            android:textColor="#66515C6F"
-            android:textSize="15sp" />
-
-        <ImageView
-            android:id="@+id/go_to2"
-            android:layout_width="30dp"
+            android:id="@+id/bell_icon"
+            android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_go_to" />
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/ic_bell_icon" />
 
+        <Button
+            android:id="@+id/edit_profile_btn"
+            android:layout_width="119dp"
+            android:layout_height="36dp"
+            android:background="#00201B1B"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/edit_profile"
+            android:textColor="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="362dp"
-        android:layout_height="54dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="451dp"
-        android:background="@drawable/white_background"
-        android:clickable="true"
-        android:focusable="auto"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/language_icon"
-            android:layout_width="30dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="-2dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_language_icon" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="1"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:text="Language"
-            android:textAlignment="center"
-            android:textColor="#515C6F"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="117dp"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="1"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:text="Language"
-            android:textAlignment="center"
-            android:textColor="#66515C6F"
-            android:textSize="15sp" />
-
-        <ImageView
-            android:id="@+id/go_to3"
-            android:layout_width="30dp"
-            android:layout_height="33dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_go_to" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/titleofscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="65dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Profile"
-        android:textColor="#000000"
-        android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/full_name"
-        android:layout_width="247dp"
-        android:layout_height="73dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="141dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Full Name"
-        android:textColor="#515C6F"
-        android:textSize="30sp"
-        android:textStyle="normal" />
-
-   <!-- <TextView
-        android:id="@+id/backArrow"
-        android:layout_width="66dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="-6dp"
-        android:clickable="true"
-        android:fontFamily="@font/roboto"
-        android:text="←"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="50sp" /> -->
-
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="202dp"
-        android:fontFamily="@font/montserrat"
-        android:text="email@email.com"
-        android:textColor="#515C6F"
-        android:textSize="18sp" />
-
-
-   <!-- <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="1dp"
-
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" /> -->
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="142dp"
-        app:srcCompat="@drawable/defaultpic" />
-
-    <Button
-        android:id="@+id/edit_profile_btn"
-        android:layout_width="119dp"
-        android:layout_height="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="260dp"
-        android:background="#4CA1D3"
-        android:textColor="#ffffff"
-        android:fontFamily="@font/montserrat"
-        android:text="EDIT PROFILE" />
-    <Button
-        android:id="@+id/log_out_btn"
-        android:layout_width="119dp"
-        android:layout_height="36dp"
-
-        android:layout_marginTop="260dp"
-        android:background="#E14E67"
-        android:textColor="#ffffff"
-        android:fontFamily="@font/montserrat"
-        android:text="Log out"
-        android:layout_marginLeft="20dp"/>
-
-    <LinearLayout
-        android:layout_width="362dp"
-        android:layout_height="54dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="322dp"
-        android:background="@drawable/white_background"
-        android:clickable="true"
-        android:focusable="auto"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <ImageView
-            android:id="@+id/social_demo_icon"
-            android:layout_width="30dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="-2dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            app:srcCompat="@drawable/ic_report_icon" />
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/defaultpic" />
+
 
         <TextView
-            android:id="@+id/socio_demo_title"
+            android:id="@+id/full_name"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:gravity="center"
-            android:text="Social-Demographic Information"
-            android:textAlignment="center"
-            android:textColor="#515C6F"
-            android:textSize="15sp" />
+            android:text="@string/full_name"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="normal" />
 
-        <ImageView
-            android:id="@+id/go_to1"
-            android:layout_width="30dp"
-            android:layout_height="33dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_go_to" />
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="email@email.com"
+            android:textColor="#515C6F"
+            android:textSize="18sp" />
+
 
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/layout_rounded_bg"
+        android:elevation="15dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="362dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/white_background"
+            android:clickable="true"
+            android:focusable="auto"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/social_demo_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                app:srcCompat="@drawable/ic_report_icon" />
+
+            <TextView
+                android:id="@+id/socio_demo_title"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/social_demographic_information"
+                android:textAlignment="center"
+                android:textColor="#515C6F"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/go_to1"
+                android:layout_width="30dp"
+                android:layout_height="33dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_go_to" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="362dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_background"
+            android:clickable="true"
+            android:focusable="auto"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/doctor_icon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_doctor_icon" />
+
+            <TextView
+                android:id="@+id/doctor_text"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/doctor"
+                android:textAlignment="center"
+                android:textColor="#515C6F"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/doctor_text2"
+                android:layout_width="148dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/doctor"
+                android:textColor="#66515C6F"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/go_to2"
+                android:layout_width="30dp"
+                android:layout_height="33dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_go_to" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="362dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_background"
+            android:clickable="true"
+            android:focusable="auto"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/language_icon"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="-2dp"
+                android:layout_marginBottom="0dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_language_icon" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/language"
+                android:textAlignment="center"
+                android:textColor="#515C6F"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="117dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:text="@string/language"
+                android:textAlignment="center"
+                android:textColor="#66515C6F"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/go_to3"
+                android:layout_width="30dp"
+                android:layout_height="33dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_go_to" />
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/log_out_btn"
+            android:layout_width="119dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="20dp"
+            android:background="#79B1B0B0"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/logout"
+            android:textColor="@color/Error"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</LinearLayout>
