--- a/app/src/main/res/layout/activity_fitbit_connection.xml
+++ b/app/src/main/res/layout/activity_fitbit_connection.xml
@@ -92,30 +92,42 @@ tools:context=".Controller.Signup.FitbitConnection">
     </LinearLayout><!--End main layout-->
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="150dp"
-        android:layout_height="wrap_content">
-
-
-        <Button
-            android:id="@+id/backBtn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:backgroundTint="#00FFFFFF"
-            android:text="@string/back" />
-    <Button
-        android:id="@+id/nextBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="200dp"
-        android:text="@string/next" />
+            android:layout_marginTop="160dp"
+            android:gravity="center">
 
 
+            <Button
+                android:id="@+id/backBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:backgroundTint="#00FFFFFF"
+                android:gravity="center"
+                android:text="@string/back" />
 
-    </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:text="3 / 4" />
+
+            <Button
+                android:id="@+id/nextBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="@string/next" />
+
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
