--- a/app/src/main/res/layout/activity_sociodemo.xml
+++ b/app/src/main/res/layout/activity_sociodemo.xml
@@ -300,12 +300,32 @@
 
         </LinearLayout> <!--end main layout-->
 
-        <Button
-            android:id="@+id/nextBtn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="@string/next" />
+            android:gravity="center"
+            android:layout_marginTop="50dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:layout_marginStart="120dp"
+                android:text="1 / 4"/>
+
+            <Button
+                android:id="@+id/nextBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@android:color/transparent"
+                android:text="@string/next" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
