--- a/app/src/main/res/layout/fragment_gad7.xml
+++ b/app/src/main/res/layout/fragment_gad7.xml
@@ -462,32 +462,44 @@
         </LinearLayout> <!--End main layout-->
 
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center">
 
 
             <Button
                 android:id="@+id/backBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="33dp"
-                android:layout_marginStart="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:backgroundTint="#00FFFFFF"
-                android:text="@string/back"
-                android:textColor="@color/black" />
+                android:gravity="center"
+                android:text="@string/back" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:text="2 / 4" />
 
             <Button
                 android:id="@+id/nextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="200dp"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:text="@string/next"
-                android:textColor="@color/black" />
+                android:gravity="center"
+                android:text="@string/next" />
 
 
         </LinearLayout>
+
     </LinearLayout>
 
 
