--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -4,44 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".Controller.Homepage.Patient.PatientProfile">
 
 
     <LinearLayout
-        android:id="@+id/white_bg"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-
-
-        >
-        <!--Back button TO PREV FRAG -->
-        <ImageView
-            android:id="@+id/bell_icon"
-            android:layout_width="33dp"
-            android:layout_height="33dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/ic_bell_icon" />
-
-        <Button
-            android:id="@+id/edit_profile_btn"
-            android:layout_width="119dp"
-            android:layout_height="36dp"
-            android:background="#00201B1B"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/edit_profile"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/edit_profile_btn"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/edit_profile_icon" />
+
+        <!--
+        <Button
+            android:layout_width="119dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="140dp"
+            android:background="#00201B1B"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/edit_profile"
+            android:textColor="#ffffff" />-->
 
         <ImageView
             android:id="@+id/imageView"
@@ -56,7 +48,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="@string/full_name"
-            android:textColor="@color/white"
+            android:textColor="@color/colorAccent"
             android:textSize="25sp"
             android:textStyle="normal" />
 
@@ -85,7 +77,7 @@
         <LinearLayout
             android:layout_width="362dp"
             android:layout_height="54dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/white_background"
             android:clickable="true"
             android:focusable="auto"
@@ -233,7 +225,7 @@
             android:background="#79B1B0B0"
             android:fontFamily="@font/montserrat"
             android:text="@string/logout"
-            android:textColor="@color/Error"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
