--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -30,6 +30,7 @@
         android:layout_height="2dp"
         android:background="#1A000000" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,10 +66,18 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/Add_App"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_toRightOf="@id/text1"
+            android:text="Add App" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerviewSession"
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/text1"
             android:layout_marginStart="31dp"
             android:layout_marginTop="5dp"
@@ -88,10 +97,19 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/Add_Med"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="50dp"
+            android:layout_toRightOf="@id/text2"
+            android:text="Add Med" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerViewMedicine"
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/text2"
             android:layout_marginStart="31dp"
             android:layout_marginTop="5dp"
@@ -103,6 +121,11 @@
             layout="@layout/add_medicine_appointment_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+
+
+
+
 
     </RelativeLayout>
 
