--- a/app/src/main/res/layout/fragment_sociodemo.xml
+++ b/app/src/main/res/layout/fragment_sociodemo.xml
@@ -45,6 +45,9 @@
             android:textColor="@color/Grey"
             android:textSize="15sp" />
 
+    <ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/mainLayoutQs"
@@ -286,7 +289,9 @@
             </LinearLayout>
 
 
-        </LinearLayout> <!--end main layout-->
+        </LinearLayout>
+
+</ScrollView><!--end main layout-->
 
 
     </LinearLayout>
