--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,7 +97,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -134,7 +134,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:text="Dr.Name"
+                        android:text="Dr.Ahmad"
                         android:textColor="#000000" />
 
                     <TextView
@@ -142,18 +142,46 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="100dp"
-                        android:layout_weight="1"
-                        android:text="MM DD" />
+                        android:text="April 6 " />
 
                     <TextView
                         android:id="@+id/session_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="(hh:mmam/pm)" />
+                        android:text="( 04:30 PM )" />
                 </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="330dp"
+        android:layout_gravity="center"
+        android:layout_height="2dp"
+        android:layout_marginBottom="5dp"
+        android:background="#1A000000" />
+
+    <ScrollView
+    android:layout_width="wrap_content"
+    android:layout_gravity="center"
+        android:scrollbars="vertical"
+    android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Retrieved data"/>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/fitbitRetrieve"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="retrieve"/>
+
 </LinearLayout>
