--- a/app/src/main/res/layout/fragment_all_draft.xml
+++ b/app/src/main/res/layout/fragment_all_draft.xml
@@ -1,21 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context=".Controller.Homepage.Drafts.allDraft">
 
+
+
     <!-- TODO: Update blank fragment layout -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/Recyclerview_All_Draft"
+    <TextView
+        android:id="@+id/voiceView"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Text"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/Recyclerview_All_DraftText"
+        android:layout_below="@+id/voiceView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="31dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        android:scrollbars="none" />
+        android:scrollbars="vertical"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_below="@id/Recyclerview_All_DraftText"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voice"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/Recyclerview_All_DraftVoice"
+        android:layout_below="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="31dp"
+        android:background="#FFFFFF"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
+</ScrollView>
