--- a/app/src/main/res/layout/fragment_text_draft.xml
+++ b/app/src/main/res/layout/fragment_text_draft.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Controller.Homepage.Drafts.textDraft">
+    android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recyclerview_Text_Draft"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -18,13 +17,5 @@
         android:background="#FFFFFF"
         android:scrollbars="none" />
 
-    <Button
-        android:id="@+id/Add_Text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/Recyclerview_Text_Draft"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="160dp"
-        android:text="Add Text Draft" />
 
 </RelativeLayout>
