--- a/app/src/main/res/layout/fragment_voice_draft.xml
+++ b/app/src/main/res/layout/fragment_voice_draft.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controller.Homepage.Drafts.voiceDraft">
+    tools:context=".Controller.Homepage.Drafts.VoiceDraftFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recyclerview_Voice_Draft"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
