--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorAccent">#4CA1D3</color>
     <color name="Grey">#B1B0B0</color>
     <color name="Error">#A02323</color>
+    <color name="recorder_bg">#F4511E</color>
 
 </resources>
