--- a/app/src/main/res/layout/activity_fitbit_connection.xml
+++ b/app/src/main/res/layout/activity_fitbit_connection.xml
@@ -74,7 +74,7 @@ tools:context=".Controller.Signup.FitbitConnection">
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="@string/status_not_connected"
+                    android:text="status_not_connected"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
