--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/success"
+            android:text="success"
             android:textSize="20sp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="325dp"
