--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -98,7 +98,7 @@
                 android:layout_height="45dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
-                android:text="@string/demographic_information"
+                android:text="demographic_information"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:layout_gravity="center"
